# origin

./: .gitignore
Lesson_1/Task_1/: Task_1.cpp
Lesson_10/task_1/: source.cpp
Lesson_10/task_2/: CMakeLists.txt  equilateral_triangle.cpp  figure.cpp  figure.h  isosceles_triangle.h  quadrilateral.h  rhomb.h  square.cpp  square.h  triangle.cpp  triangle.h
Lesson_11/task_1/: task_1.sln
Lesson_11/task_2/: task_2.sln
Lesson_11/task_3/: CMakeLists.txt  leaver.h  task_3.cpp
Lesson_2/task_1/: task_1.cpp
Lesson_2/task_2/: task_2.cpp
Lesson_2/task_3/: task_3.cpp
Lesson_3/task_1/: task_1.cpp  task_1.sln  task_1.vcxproj
Lesson_3/task_2/: task_2.cpp  task_2.sln  task_2.vcxproj
Lesson_4/task_1/: out.txt  task_1.cpp  task_1.sln  task_1.vcxproj
Lesson_4/task_2/: in.txt  out.txt  task_2.cpp  task_2.sln  task_2.vcxproj
Lesson_5/task_1/: task_1.cpp  task_1.sln  task_1.vcxproj
Lesson_5/task_2/: task_2.cpp  task_2.sln  task_2.vcxproj
Lesson_5/task_3/: task_3.cpp  task_3.sln  task_3.vcxproj
Lesson_6/task_1/: task_1.cpp  (+4 more)
race/race/race_library/: CMakeLists.txt  air_grand_prix.cpp  air_grand_prix.h  air_transport.cpp  air_transport.h  broom.cpp  broom.h  camel.cpp  camel.h  centaur.cpp  centaur.h  eagle.cpp  eagle.h  grand_prix.cpp  grand_prix.h  grand_prix_error.cpp  grand_prix_error.h  ground_grand_prix.cpp  ground_grand_prix.h  ground_transport.cpp  ground_transport.h  leaver.cpp  leaver.h  magic_carpet.cpp  magic_carpet.h  mixed_grand_prix.cpp  mixed_grand_prix.h  speed_camel.cpp  speed_camel.h  terrain_boots.cpp  terrain_boots.h  transport.cpp  transport.h
(+75 files in other folders)
