cmake_minimum_required(VERSION 3.22.0)

project(figure)

add_executable(figure
	source.cpp
	figure.cpp
	figure.h
	triangle.cpp
	triangle.h
	quadrilateral.cpp
	quadrilateral.h
	equilateral_triangle.cpp
	equilateral_triangle.h
	isosceles_triangle.cpp
	isosceles_triangle.h
	parallelogram.cpp
	parallelogram.h
	rectangle_this.cpp
	rectangle_this.h
	rhomb.cpp
	rhomb.h
	right_triangle.cpp
	right_triangle.h
	square.cpp
	square.h)